📝 マークダウンの追加

--- a/CBReport11_15A22014_InoueHaruki.ipynb
+++ b/CBReport11_15A22014_InoueHaruki.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -376,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "解: [ 3.42857143e+00  4.50359963e+15 -9.00719925e+15]\n"
+      "解 (擬似逆行列使用): [2.83333333 5.         2.5       ]\n"
      ]
     }
    ],
@@ -393,20 +393,35 @@
     "import numpy as np\n",
     "\n",
     "# 行列とベクトルの定義\n",
-    "A = np.array([[1.0,2.0,1.0],[5.0,4.0,2.0],[7.0,8.0,4.0]])\n",
-    "B = np.array([15.0,39.0,70.0])\n",
+    "A = np.array([[1.0, 2.0, 1.0], [5.0, 4.0, 2.0], [7.0, 8.0, 4.0]])\n",
+    "B = np.array([15.0, 39.0, 70.0])\n",
     "\n",
-    "# numpyの関数を使って解を求める\n",
-    "X = np.linalg.solve(A, B)\n",
+    "# 行列式を計算\n",
+    "det_A = np.linalg.det(A)\n",
     "\n",
-    "print(\"解:\", X)\n"
+    "# 行列式が非常に小さい場合は擬似逆行列を使用\n",
+    "if np.abs(det_A) < 1e-10:\n",
+    "    X = np.linalg.lstsq(A, B, rcond=None)[0]\n",
+    "    print(\"解 (擬似逆行列使用):\", X)\n",
+    "else:\n",
+    "    X = np.linalg.solve(A, B)\n",
+    "    print(\"解:\", X)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (2) - a の手計算\n",
+    "# 結果が異なる理由\n",
+    "- 小数表示による微小なずれが重なって最終的な結果が異なっている\n",
+    "- 行列式が0に著しく近い数値となり、実質`行列式 = 0`となって計算に負荷がかかっている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (2) - c の手計算\n",
     "\n",
     "行列 $\\mathbf{A}$ とベクトル $\\mathbf{b}$ は以下の通り\n",
     "\n",
